swipe panel on screens > 950px absolute, less than 950px fixed and scrollable on mobile

--- a/themes/cwclan_boot/styles.css
+++ b/themes/cwclan_boot/styles.css
@@ -18,7 +18,6 @@ body {
     background:url('../cwclan_boot/img/design/bgr.jpg');
     font-weight:300;
     font-size: 14px;
-    padding-bottom: 70px;
 }
 ::selection {
     background: #ef9849; 
@@ -788,9 +787,9 @@ fieldset[disabled] .btn-dark.active {
     position: absolute;
     z-index: 97;
     top: 0;
-    width: 240px;
+    width: 200px;
     height: 100%;
-    left: -240px;
+    left: -200px;    
     box-sizing: border-box;
     -moz-box-sizing: border-box;
     padding: 5px;    
@@ -800,3 +799,13 @@ fieldset[disabled] .btn-dark.active {
     -o-transition:  left 0.4s ease-in-out;
     transition:  left 0.4s ease-in-out;
 }
+
+@media only screen and (max-width: 950px) {
+    .swipe-sidebar {
+        overflow-x: hidden;
+        overflow-y: scroll;
+        -webkit-overflow-scrolling: touch;        
+        position: fixed;
+    }
+}
+
